Generalized Read_Data and Tested Fractal Features (They Failed.)

--- a/Read_Data.ipynb
+++ b/Read_Data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,8 @@
     "import glob\n",
     "from sklearn import svm\n",
     "from skimage.feature import greycomatrix, greycoprops\n",
-    "from sklearn import metrics"
+    "from sklearn import metrics\n",
+    "from tqdm import tqdm"
    ]
   },
   {
@@ -25,22 +26,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "886\n"
+     ]
+    }
+   ],
    "source": [
     "def Read_Dataset(saved=False):\n",
     "    if saved:\n",
-    "        with open('./Datasets/Original Dataset/data.npy', 'rb') as f:\n",
-    "            x_train = np.load(f, allow_pickle=True)\n",
-    "            y_train = np.load(f, allow_pickle=True)\n",
-    "            x_test = np.load(f, allow_pickle=True)\n",
-    "            y_test = np.load(f, allow_pickle=True)\n",
+    "        with open('./Datasets/CMP23-Dataset/data.npy', 'rb') as f:\n",
+    "            x_data = np.load(f, allow_pickle=True)\n",
+    "            y_data = np.load(f, allow_pickle=True)\n",
+    "          \n",
     "\n",
     "    else:\n",
     "        x_data, y_data = [], []\n",
     "        #load male images\n",
-    "        for filename in sorted(glob.glob('CMP23-Dataset/Male/*.jpg')):\n",
+    "        for filename in tqdm(sorted(glob.glob('./Datasets/CMP23-Dataset/Male/*.jpg'))):\n",
     "            try:\n",
     "                img = cv2.imread(filename, 0)                           # 0 for gray-scale\n",
     "                x_data.append(img)\n",
@@ -50,7 +58,7 @@
     "            \n",
     "\n",
     "        ## load female images\n",
-    "        for filename in sorted(glob.glob('CMP23-Dataset/Female/*.jpg')):\n",
+    "        for filename in tqdm(sorted(glob.glob('./Datasets/CMP23-Dataset/Female/*.jpg'))):\n",
     "            try:\n",
     "                img = cv2.imread(filename, 0)\n",
     "                x_data.append(img)\n",
@@ -61,22 +69,22 @@
     "\n",
     "        x_data = np.array(x_data)\n",
     "        y_data = np.array(y_data)\n",
+    "        with open('./Datasets/CMP23-Dataset/data.npy', 'wb') as f:\n",
+    "            np.save(f, x_data, allow_pickle=True)\n",
+    "            np.save(f, y_data, allow_pickle=True)\n",
+    "          \n",
     "\n",
-    "        # Shuffle both\n",
-    "        p = np.random.permutation(len(x_data))\n",
-    "        x_data = x_data[p]\n",
-    "        y_data = y_data[p]\n",
+    "    # Shuffle both\n",
+    "    p = np.random.permutation(len(x_data))\n",
+    "    x_data = x_data[p]\n",
+    "    y_data = y_data[p]\n",
     "\n",
-    "        train_size = int(0.8 * len(x_data))\n",
-    "        print(train_size)\n",
-    "        x_train, y_train = x_data[:train_size], y_data[:train_size]\n",
-    "        x_test, y_test = x_data[train_size:], y_data[train_size:]\n",
+    "    train_size = int(0.8 * len(x_data))\n",
+    "    print(train_size)\n",
+    "    x_train, y_train = x_data[:train_size], y_data[:train_size]\n",
+    "    x_test, y_test = x_data[train_size:], y_data[train_size:]\n",
     "\n",
-    "        with open('./Original Dataset/data.npy', 'wb') as f:\n",
-    "            np.save(f, x_train, allow_pickle=True)\n",
-    "            np.save(f, y_train, allow_pickle=True)\n",
-    "            np.save(f, x_test, allow_pickle=True)\n",
-    "            np.save(f, y_test, allow_pickle=True)\n",
+    "        \n",
     "    return x_train, y_train, x_test, y_test\n",
     "\n",
     "x_train, y_train, x_test, y_test = Read_Dataset(saved=True)\n"
