--- a/FindGLCMFeatures.ipynb
+++ b/FindGLCMFeatures.ipynb
@@ -37,7 +37,7 @@
     }
    ],
    "source": [
-    "%run Read_Data.ipynb"
+    "from ipynb.fs.full.Read_Data import x_train, y_train, x_test, y_test"
    ]
   },
   {
