--- a/RandomForest.ipynb
+++ b/RandomForest.ipynb
@@ -55,7 +55,7 @@
     }
    ],
    "source": [
-    "from ipynb.fs.full.FindGLCMFeatures import x_train, y_train, x_test, y_test\n"
+    "%run FindGLCMFeatures.ipynb"
    ]
   },
   {
