--- a/Read_Data.ipynb
+++ b/Read_Data.ipynb
@@ -146,7 +146,7 @@
     "\n",
     "    return x_train, y_train, x_test, y_test\n",
     "\n",
-    "x_train, y_train, x_test, y_test = Read_Dataset(saved=False, plot=True, CMP_Only=False)\n"
+    "x_train, y_train, x_test, y_test = Read_Dataset(saved=True, plot=True, CMP_Only=True)\n"
    ]
   }
  ],
