--- a/SVM.ipynb
+++ b/SVM.ipynb
@@ -55,6 +55,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Initialize SVM classifier\n",
+    "modelofHOG = svm.SVC(kernel='rbf')                # Let's case into an infinte dimensional space.\n",
+    "modelofHOG = modelofHOG.fit(x_train_hog, y_train)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [],
@@ -89,6 +101,17 @@
     "\n",
     "predictions = model.predict(x_test)\n",
     "print(metrics.accuracy_score(y_test, predictions) * 100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "predictionshog = modelofHOG.predict(x_test_hog)\n",
+    "print(metrics.accuracy_score(y_test, predictionshog) * 100)"
    ]
   }
  ],
