--- a/SVM.ipynb
+++ b/SVM.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,9 +11,9 @@
     "from skimage.feature import greycomatrix, greycoprops\n",
     "from sklearn import metrics\n",
     "from importnb import Notebook\n",
-    "#import import_ipynb\n",
-    "#from Extract_Features import x_train, y_train\n",
-    "#import Extract_Features"
+    "import import_ipynb\n",
+    "from Extract_Features import x_train, y_train\n",
+    "import Extract_Features"
    ]
   },
   {
@@ -51,18 +51,6 @@
    "metadata": {},
    "source": [
     "## SVM Classifier - Training"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "# Initialize SVM classifier\n",
-    "modelofHOG = svm.SVC(kernel='rbf')                # Let's case into an infinte dimensional space.\n",
-    "modelofHOG = modelofHOG.fit(x_train_hog, y_train)\n"
    ]
   },
   {
@@ -134,7 +122,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4
  },
