--- a/Models/SVM.ipynb
+++ b/Models/SVM.ipynb
@@ -59,6 +59,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%run ../Features/FindHogFeatures.ipynb"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -78,10 +87,55 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize SVM classifier for HOG\n",
+    "modelofHOG = svm.LinearSVC()                # Let's case into an infinte dimensional space.\n",
+    "modelofHOG = modelofHOG.fit(data_train,y_train)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#HOG nonlinear\n",
+    "modelofHOG2 = svm.SVC(kernel='rbf')                 # Let's case into an infinte dimensional space.\n",
+    "modelofHOG2 = modelofHOG2.fit(data_train,y_train)\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## SVM Classifier - Testing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# prediction for Hog Features\n",
+    "predictions = modelofHOG.predict(data_test)\n",
+    "\n",
+    "print(metrics.accuracy_score(y_test, predictions) * 100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#HOG non linear SVM\n",
+    "predictions = modelofHOG2.predict(data_test)\n",
+    "print(metrics.accuracy_score(y_test, predictions) * 100)"
    ]
   },
   {
