--- a/Models/RandomForest.ipynb
+++ b/Models/RandomForest.ipynb
@@ -127,6 +127,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%run ../Features/FindHogFeatures.ipynb"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -147,10 +156,32 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Boost 100 weak decision trees for HOG feature\n",
+    "modelHOG = RandomForestClassifier(n_estimators=100)\n",
+    "\n",
+    "modelHOG = modelHOG.fit(data_train, y_train)\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Random Forest - Testing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictions = modelHOG.predict(data_test)\n",
+    "print(metrics.accuracy_score(y_test, predictions) * 100)"
    ]
   },
   {
