Finalizing the Cold and Hinge.

--- a/Features/FindCOLDFeatures.ipynb
+++ b/Features/FindCOLDFeatures.ipynb
@@ -24,7 +24,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%run Read_Data.ipynb"
+    "%run ../Preprocessing/Read_Data.ipynb"
    ]
   },
   {
@@ -51,7 +51,7 @@
     "R_INNER = 5.0\n",
     "R_OUTER = 35.0\n",
     "APPROX_POLY_FACTOR = 0.01\n",
-    "K_S = np.arange(3, 6)\n",
+    "K_S = np.arange(3, 8)\n",
     "np.seterr(divide = 'ignore')"
    ]
   },
