--- a/Features/FindHINGEFeatures.ipynb
+++ b/Features/FindHINGEFeatures.ipynb
@@ -47,7 +47,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%run Read_Data.ipynb"
+    "%run ../Preprocessing/Read_Data.ipynb"
    ]
   },
   {
