Adding a combing scheme

--- a/Features/FindGLCMFeatures.ipynb
+++ b/Features/FindGLCMFeatures.ipynb
@@ -67,8 +67,8 @@
    "outputs": [],
    "source": [
     "# converting the dataset into features (x1, x2)\n",
-    "x_train = np.array([(get_glcm_feature(img, 'energy'), (get_glcm_feature(img, 'homogeneity'))) for img in x_train])\n",
-    "x_test = np.array([(get_glcm_feature(img, 'energy'), (get_glcm_feature(img, 'homogeneity'))) for img in x_test])"
+    "x_train = np.array([(get_glcm_feature(img, 'energy'), (get_glcm_feature(img, 'homogeneity'))) for img in tqdm(x_train)])\n",
+    "x_test = np.array([(get_glcm_feature(img, 'energy'), (get_glcm_feature(img, 'homogeneity'))) for img in tqdm(x_test)])"
    ]
   },
   {
