--- a/Preprocessing/Read_Data.ipynb
+++ b/Preprocessing/Read_Data.ipynb
@@ -146,9 +146,14 @@
     "\n",
     "    return x_train, y_train, x_test, y_test\n",
     "\n",
-    "x_train, y_train, x_test, y_test = Read_Dataset(saved=True, plot=True, CMP_Only=True)\n",
+    "x_train, y_train, x_test, y_test = Read_Dataset(saved=True, plot=False, CMP_Only=True)\n",
     "# You should run this with saved set to false only once after cloning."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
