change some of Hog feature

--- a/Features/FindHogFeatures.ipynb
+++ b/Features/FindHogFeatures.ipynb
@@ -54,7 +54,9 @@
     "for img in x_train:\n",
     "   data_train .append(get_hog_feature(img))\n",
     "for img in x_test:   \n",
-    "    data_test.append(get_hog_feature(img))"
+    "    data_test.append(get_hog_feature(img))\n",
+    "x_train = data_train\n",
+    "x_test = data_test    "
    ]
   }
  ],
