--- a/Models/AdaBoost.ipynb
+++ b/Models/AdaBoost.ipynb
@@ -35,7 +35,7 @@
    "outputs": [],
    "source": [
     "model = AdaBoostClassifier(n_estimators=100, random_state=0)\n",
-    "model = model.fit(data_train, y_train)\n"
+    "model = model.fit(x_train, y_train)\n"
    ]
   },
   {
@@ -44,7 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "predictions = model.predict(data_test)\n",
+    "predictions = model.predict(x_test)\n",
     "print(metrics.accuracy_score(y_test, predictions) * 100)"
    ]
   }
