--- a/Models/ModelWithPCA.ipynb
+++ b/Models/ModelWithPCA.ipynb
@@ -35,8 +35,8 @@
    "outputs": [],
    "source": [
     "pca = PCA(n_components=3)\n",
-    "X_train = pca.fit_transform(data_train)\n",
-    "X_test = pca.transform(data_test)"
+    "X_train = pca.fit_transform(x_train)\n",
+    "X_test = pca.transform(x_test)"
    ]
   },
   {
