--- a/Models/SVM.ipynb
+++ b/Models/SVM.ipynb
@@ -94,18 +94,7 @@
    "source": [
     "# Initialize SVM classifier for HOG\n",
     "modelofHOG = svm.LinearSVC()                # Let's case into an infinte dimensional space.\n",
-    "modelofHOG = modelofHOG.fit(data_train,y_train)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#HOG nonlinear\n",
-    "modelofHOG2 = svm.SVC(kernel='rbf')                 # Let's case into an infinte dimensional space.\n",
-    "modelofHOG2 = modelofHOG2.fit(data_train,y_train)\n"
+    "modelofHOG = modelofHOG.fit(x_train,y_train)\n"
    ]
   },
   {
@@ -121,20 +110,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# prediction for Hog Features\n",
-    "predictions = modelofHOG.predict(data_test)\n",
-    "\n",
-    "print(metrics.accuracy_score(y_test, predictions) * 100)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "#HOG non linear SVM\n",
-    "predictions = modelofHOG2.predict(data_test)\n",
+    "predictions = modelofHOG.predict(x_test)\n",
     "print(metrics.accuracy_score(y_test, predictions) * 100)"
    ]
   },
