--- a/Models/ModelWithPCA.ipynb
+++ b/Models/ModelWithPCA.ipynb
@@ -21,87 +21,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "0it [00:00, ?it/s]\n",
+      "100%|██████████| 131/131 [00:06<00:00, 21.38it/s]\n",
+      "0it [00:00, ?it/s]\n",
+      "0it [00:00, ?it/s]\n",
+      "C:\\Users\\Lenovo\\AppData\\Local\\Temp/ipykernel_16012/2039839859.py:50: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
+      "  x_data_cmp,  y_data_cmp = np.array(x_data_cmp), np.array(y_data_cmp)\n",
+      "100%|██████████| 98/98 [00:09<00:00, 10.16it/s]\n",
+      "100%|██████████| 33/33 [00:03<00:00, 10.41it/s]\n",
+      "  0%|          | 0/98 [00:00<?, ?it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "%run ../Features/FindHogFeatures.ipynb"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "pca = PCA(n_components=3)\n",
-    "X_train = pca.fit_transform(x_train)\n",
-    "X_test = pca.transform(x_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Initialize SVM Linear classifier\n",
-    "modelofHOG = svm.LinearSVC()                # Let's case into an infinte dimensional space.\n",
-    "modelofHOG = modelofHOG.fit(X_train,y_train)\n",
-    "predictions = modelofHOG.predict(X_test)\n",
-    "\n",
-    "print(metrics.accuracy_score(y_test, predictions) * 100)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "modelofHOG = svm.SVC(kernel='rbf')                 # Let's case into an infinte dimensional space.\n",
-    "modelofHOG = modelofHOG.fit(X_train,y_train)\n",
-    "predictions = modelofHOG.predict(X_test)\n",
-    "\n",
-    "print(metrics.accuracy_score(y_test, predictions) * 100)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Boost 100 weak decision trees\n",
-    "model = RandomForestClassifier(n_estimators=100)\n",
-    "\n",
-    "model = model.fit(X_train, y_train)\n",
-    "predictions = model.predict(X_test)\n",
-    "print(metrics.accuracy_score(y_test, predictions) * 100)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model = GradientBoostingClassifier(n_estimators=100, learning_rate=1.0, max_depth=1)\n",
-    "model = model.fit(X_train, y_train)\n",
-    "predictions = model.predict(X_test)\n",
-    "print(metrics.accuracy_score(y_test, predictions) * 100)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model = AdaBoostClassifier(n_estimators=100, random_state=0)\n",
-    "model = model.fit(X_train, y_train)\n",
-    "predictions = model.predict(X_test)\n",
-    "print(metrics.accuracy_score(y_test, predictions) * 100)"
+    "x_train = pca.fit_transform(x_train)\n",
+    "x_test = pca.transform(x_test)"
    ]
   }
  ],
