Fixed the FeatureChef, Added Models for it and disseminated CV.

--- a/Features/FindHINGEFeatures.ipynb
+++ b/Features/FindHINGEFeatures.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,9 +97,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 14%|█▎        | 37/271 [00:06<00:40,  5.75it/s]"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m/Users/essam/Documents/GitHub/Gender-Classification-ICDAR2013/Features/FindHINGEFeatures.ipynb Cell 5'\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/essam/Documents/GitHub/Gender-Classification-ICDAR2013/Features/FindHINGEFeatures.ipynb#ch0000004?line=0'>1</a>\u001b[0m x_train \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39marray([get_hinge_feature((img)) \u001b[39mfor\u001b[39;00m img \u001b[39min\u001b[39;00m tqdm(x_train)])\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/essam/Documents/GitHub/Gender-Classification-ICDAR2013/Features/FindHINGEFeatures.ipynb#ch0000004?line=1'>2</a>\u001b[0m x_test \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39marray([get_hinge_feature((img)) \u001b[39mfor\u001b[39;00m img \u001b[39min\u001b[39;00m tqdm(x_test)])\n",
+      "\u001b[1;32m/Users/essam/Documents/GitHub/Gender-Classification-ICDAR2013/Features/FindHINGEFeatures.ipynb Cell 5'\u001b[0m in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/essam/Documents/GitHub/Gender-Classification-ICDAR2013/Features/FindHINGEFeatures.ipynb#ch0000004?line=0'>1</a>\u001b[0m x_train \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39marray([get_hinge_feature((img)) \u001b[39mfor\u001b[39;00m img \u001b[39min\u001b[39;00m tqdm(x_train)])\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/essam/Documents/GitHub/Gender-Classification-ICDAR2013/Features/FindHINGEFeatures.ipynb#ch0000004?line=1'>2</a>\u001b[0m x_test \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39marray([get_hinge_feature((img)) \u001b[39mfor\u001b[39;00m img \u001b[39min\u001b[39;00m tqdm(x_test)])\n",
+      "\u001b[1;32m/Users/essam/Documents/GitHub/Gender-Classification-ICDAR2013/Features/FindHINGEFeatures.ipynb Cell 4'\u001b[0m in \u001b[0;36mget_hinge_feature\u001b[0;34m(image)\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/essam/Documents/GitHub/Gender-Classification-ICDAR2013/Features/FindHINGEFeatures.ipynb#ch0000003?line=16'>17</a>\u001b[0m points \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39marray([point[\u001b[39m0\u001b[39m] \u001b[39mfor\u001b[39;00m point \u001b[39min\u001b[39;00m cnt])\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/essam/Documents/GitHub/Gender-Classification-ICDAR2013/Features/FindHINGEFeatures.ipynb#ch0000003?line=17'>18</a>\u001b[0m xs, ys \u001b[39m=\u001b[39m points[:, \u001b[39m0\u001b[39m], points[:, \u001b[39m1\u001b[39m]\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/essam/Documents/GitHub/Gender-Classification-ICDAR2013/Features/FindHINGEFeatures.ipynb#ch0000003?line=18'>19</a>\u001b[0m point_1s \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39marray([cnt[(i \u001b[39m+\u001b[39m LEG_LENGTH) \u001b[39m%\u001b[39m n_pixels][\u001b[39m0\u001b[39m] \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(n_pixels)])\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/essam/Documents/GitHub/Gender-Classification-ICDAR2013/Features/FindHINGEFeatures.ipynb#ch0000003?line=19'>20</a>\u001b[0m point_2s \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39marray([cnt[(i \u001b[39m-\u001b[39m LEG_LENGTH) \u001b[39m%\u001b[39m n_pixels][\u001b[39m0\u001b[39m] \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(n_pixels)])\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/essam/Documents/GitHub/Gender-Classification-ICDAR2013/Features/FindHINGEFeatures.ipynb#ch0000003?line=20'>21</a>\u001b[0m x1s, y1s \u001b[39m=\u001b[39m point_1s[:, \u001b[39m0\u001b[39m], point_1s[:, \u001b[39m1\u001b[39m]\n",
+      "\u001b[1;32m/Users/essam/Documents/GitHub/Gender-Classification-ICDAR2013/Features/FindHINGEFeatures.ipynb Cell 4'\u001b[0m in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/essam/Documents/GitHub/Gender-Classification-ICDAR2013/Features/FindHINGEFeatures.ipynb#ch0000003?line=16'>17</a>\u001b[0m points \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39marray([point[\u001b[39m0\u001b[39m] \u001b[39mfor\u001b[39;00m point \u001b[39min\u001b[39;00m cnt])\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/essam/Documents/GitHub/Gender-Classification-ICDAR2013/Features/FindHINGEFeatures.ipynb#ch0000003?line=17'>18</a>\u001b[0m xs, ys \u001b[39m=\u001b[39m points[:, \u001b[39m0\u001b[39m], points[:, \u001b[39m1\u001b[39m]\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/essam/Documents/GitHub/Gender-Classification-ICDAR2013/Features/FindHINGEFeatures.ipynb#ch0000003?line=18'>19</a>\u001b[0m point_1s \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39marray([cnt[(i \u001b[39m+\u001b[39;49m LEG_LENGTH) \u001b[39m%\u001b[39;49m n_pixels][\u001b[39m0\u001b[39m] \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(n_pixels)])\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/essam/Documents/GitHub/Gender-Classification-ICDAR2013/Features/FindHINGEFeatures.ipynb#ch0000003?line=19'>20</a>\u001b[0m point_2s \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39marray([cnt[(i \u001b[39m-\u001b[39m LEG_LENGTH) \u001b[39m%\u001b[39m n_pixels][\u001b[39m0\u001b[39m] \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(n_pixels)])\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/essam/Documents/GitHub/Gender-Classification-ICDAR2013/Features/FindHINGEFeatures.ipynb#ch0000003?line=20'>21</a>\u001b[0m x1s, y1s \u001b[39m=\u001b[39m point_1s[:, \u001b[39m0\u001b[39m], point_1s[:, \u001b[39m1\u001b[39m]\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "x_train = np.array([get_hinge_feature((img)) for img in tqdm(x_train)])\n",
     "x_test = np.array([get_hinge_feature((img)) for img in tqdm(x_test)])"
@@ -108,7 +130,7 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "4f1daba52a977a9ca261d4e047034e1359a47d2ceb499fa4b8c2080bb02e3bd2"
+   "hash": "40d3a090f54c6569ab1632332b64b2c03c39dcf918b08424e98f38b5ae0af88f"
   },
   "kernelspec": {
    "display_name": "Python 3.8.8 ('base')",
